# economic-warfare-osint

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  DEMO_PLAN.md  HANDOFF.md  HANDOFF_CURSOR.md  README.md  TOOL_REFERENCE.md  build.sh  clear_peers_cache.py  plan.md  pyproject.toml  render-build.sh  render.yaml  requirements.txt
.github/: CLAUDE.md  CODEOWNERS  pull_request_template.md
.github/workflows/: README.md  ci.yml
data/fixtures/: vessels.json
docs/: wargame-deployment.md
docs/superpowers/plans/: 2026-04-08-four-pages-functional.md
docs/superpowers/specs/: 2026-04-08-four-pages-functional-design.md  2026-05-11-risk-feed-restructure-design.md
fixtures/: risk_feed_demo.json
frontend/src/: App.tsx
plans/: ARCHITECTURE.md  CLAUDE.md  SMOKE_TEST.md  SWARM_EMBED_PLAN.md
scripts/: check-swarm-connection.sh  redact-cassettes.py
src/: CLAUDE.md  analytics.py  api.py  auth.py  comparable_sourcer.py  db.py  llm.py  sanctions_impact.py
src/common/: CLAUDE.md  cache.py  config.py  http_client.py  rate_limit.py  sanitize.py  types.py
src/fusion/: graph_builder.py  renderer.py
src/orchestrator/: entity_resolver.py  main.py  person_search.py  prompts.py  tool_registry.py
src/risk_feed/: __init__.py  enrich.py
src/routers/: CLAUDE.md  _shared.py  admin.py  auth.py  briefings.py  coa.py  exercises.py  monitoring.py  risk_feed.py  watchlist.py
src/tools/: CLAUDE.md
src/tools/corporate/: client.py  models.py  server.py
src/tools/economic/: __init__.py  client.py  models.py  server.py
src/tools/geopolitical/: client.py  models.py  server.py
src/tools/market/: client.py  models.py  server.py
src/tools/markets/: __init__.py  feed.py
src/tools/sanctions/: __init__.py  client.py  delta.py  models.py  server.py
src/tools/sayari/: client.py  models.py  rest_client.py  server.py
src/tools/screening/: client.py
src/tools/trade/: client.py  models.py  server.py
src/tools/vessels/: client.py  geo.py
src/wargame_ai/: __init__.py
src/wargame_ai/agents/: __init__.py  arbiter.py  country_agent.py  leader_profile.py
src/wargame_ai/memory/: __init__.py  embeddings.py  store.py
src/wargame_ai/sim/: __init__.py  escalation_ladder.py  loop.py  runner.py  signals.py  world.py
src/wargame_ai/tests/: __init__.py  test_arbiter.py  test_country_agent.py  test_escalation_ladder.py  test_leader_profile.py  test_signals.py  test_sim_loop.py  test_taiwan_scenario.py  test_world.py
src/wargame_backend/: alembic.ini
src/wargame_backend/alembic/: env.py
src/wargame_backend/app/: __init__.py  config.py  deps.py  logging.py  main.py  rate_limit.py  sim_runner.py
src/wargame_backend/ingest/: __init__.py  acled.py  base.py  cameo.py  datalastic.py  eia.py  fred.py  gdelt.py  gleif.py  icij_offshore.py  imf.py  ofac_sdn.py  (+10 more)
src/wargame_shared/: __init__.py
templates/: report.md.j2
tests/: CLAUDE.md  conftest.py  test_person_search.py  test_tools_import.py
tests/e2e/: test_input_validation.py  test_rate_limit.py  test_watchlist_e2e.py
(+77 files in other folders)
