[project]
name = "economic-warfare-osint"
version = "0.1.0"
description = "OSINT Agentic Workflow for Economic Warfare Exercise Support"
requires-python = ">=3.12"
dependencies = [
    # LLM / Agent
    "anthropic>=0.52.0",
    "mcp>=1.0.0",
    # Data models & config
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    # HTTP / API clients
    "httpx>=0.27",
    "aiohttp>=3.9",
    # Market data
    "yfinance>=0.2.40",
    # Data processing
    "pandas>=2.2",
    # Caching
    "diskcache>=5.6",
    # Output / reporting
    "jinja2>=3.1",
    "rich>=13.0",
    # Graph visualization
    "networkx>=3.3",
    # Web server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # Corporate intelligence
    "sayari>=0.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
