[project]
name = "economic-warfare-osint"
version = "0.1.0"
description = "OSINT Agentic Workflow for Economic Warfare Exercise Support"
requires-python = ">=3.12"
dependencies = [
    # LLM / Agent
    "anthropic>=0.52.0",
    "mcp>=1.0.0",
    # Data models & config (pydantic floor bumped for swarm compat)
    "pydantic>=2.9.2",
    "python-dotenv>=1.0",
    # HTTP / API clients
    "httpx>=0.27.2",
    "aiohttp>=3.9",
    # Market data
    "yfinance>=0.2.40",
    # Data processing
    "pandas>=2.2.3",
    # Caching
    "diskcache>=5.6",
    # Output / reporting
    "jinja2>=3.1",
    "rich>=13.0",
    # Graph visualization
    "networkx>=3.3",
    # Web server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # Corporate intelligence
    "sayari>=0.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]
# Swarm-embed deps — install only when running the /api/wargame subapp.
# Gated at runtime by the WARGAME_ENABLED env var (see src/api.py).
# Install with: uv sync --extra wargame
wargame = [
    # Data layer
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "redis>=5.2.0",
    # Config / typing
    "pydantic-settings>=2.6.1",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    # AI
    "langgraph>=0.2.40",
    "langchain>=0.3.7",
    "langchain-anthropic>=0.2.4",
    "langchain-community>=0.3.5",
    # Data ingestion
    "pyarrow>=18.0.0",
    "dlt[postgres]>=1.3.0",
    "pyyaml>=6.0.2",
    "orjson>=3.10.11",
    # Utilities
    "python-multipart>=0.0.17",
    "slowapi>=0.1.9",
    # Test helpers swarm expects at runtime (fakeredis is imported defensively)
    "fakeredis>=2.26.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
